[project]
name = "generate_dummy_files"
version = "0.1.0"
description = "A project to generate dummy files"
authors = [
    { name = "w h somadasa", email = "your@gmail.com" }
]
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Add your dependencies here, for example:
    "pillow>=11.2.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
