[project]
name = "phantom_file_forge"
version = "0.1.1"
description = "A project to generate dummy files"
authors = [
    { name = "w h somadasa", email = "rhewage.lk@gmail.com" }
]

license-files = ["LICENSE"]

readme = "README.md"

requires-python = ">=3.12"
dependencies = [
    # Add your dependencies here, for example:
    "pillow>=11.2.1",
]

[project.scripts]
generate-dummy-files = "phantom_file_forge.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
